# Django-User-Management

./: README.md  pyproject.toml
awesome_website/awesome_website/: settings.py  urls.py
awesome_website/users/: forms.py  urls.py  views.py
awesome_website/users/templates/: base.html
awesome_website/users/templates/registration/: login.html  password_change_done.html  password_change_form.html
awesome_website/users/templates/users/: dashboard.html
src/django_user_management/: __init__.py
