[project]
name = "django-user-management"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Artemii", email = "artemyin@gmail.com" }
]
dependencies = ["django~=4.2.1", "social-auth-app-django~=5.2.0"]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
